--- a/Mobile_Web_Lab1.ipynb
+++ b/Mobile_Web_Lab1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOJhhxXdR9gTgbTSdU+U/+",
+      "authorship_tag": "ABX9TyMVb1lZpjemXjpb/u/ILw2K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,6 +90,7 @@
         "def home():\n",
         "  return render_template('index.html')\n",
         "\t#return \"<h1>This is my first page in Python</h1>\"\n",
+        "  #update version1\n",
         "\n",
         "app.run()\n"
       ],
