--- a/Mobile_Web_Lab1.ipynb
+++ b/Mobile_Web_Lab1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVb1lZpjemXjpb/u/ILw2K",
+      "mount_file_id": "1J96yuG2BU9Qb7rTEMGNqaUxEhMlrOi1V",
+      "authorship_tag": "ABX9TyMOWVgyi3d/5/sJ/xYcLYkT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "REDFLL_VaKSp",
-        "outputId": "f88aa82e-2046-451d-8eea-b711dafcab46"
+        "outputId": "646d31ab-07d1-48c6-f2cc-79b48c310fcf"
       },
       "outputs": [
         {
@@ -63,7 +64,7 @@
             "Requirement already satisfied: PyYAML in /usr/local/lib/python3.10/dist-packages (from pyngrok==4.1.1) (6.0.1)\n",
             "Building wheels for collected packages: pyngrok\n",
             "  Building wheel for pyngrok (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyngrok: filename=pyngrok-4.1.1-py3-none-any.whl size=15964 sha256=310da60f2aa4734fcf5e66b5c016d9012f28bb01f7f8ee7cb4bbef172795570f\n",
+            "  Created wheel for pyngrok: filename=pyngrok-4.1.1-py3-none-any.whl size=15964 sha256=c62da4b80f321de67d4968e9bc1e0079e79f8c57a0699d6c7faf7a3bc5fd84ba\n",
             "  Stored in directory: /root/.cache/pip/wheels/4c/7c/4c/632fba2ea8e88d8890102eb07bc922e1ca8fa14db5902c91a8\n",
             "Successfully built pyngrok\n",
             "Installing collected packages: pyngrok\n",
@@ -87,10 +88,16 @@
         "run_with_ngrok(app)\n",
         "\n",
         "@app.route(\"/\")\n",
-        "def home():\n",
+        "def hello_world():\n",
         "  return render_template('index.html')\n",
-        "\t#return \"<h1>This is my first page in Python</h1>\"\n",
-        "  #update version1\n",
+        "\n",
+        "@app.route('/contact')\n",
+        "def contact():\n",
+        "  return render_template('contact.html')\n",
+        "\n",
+        "@app.route('/hi/<name>')\n",
+        "def hi(name):\n",
+        "  return render_template('hi.html', name=name)\n",
         "\n",
         "app.run()\n"
       ],
@@ -99,7 +106,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WqV55iCVag_D",
-        "outputId": "5679be76-94a9-4788-e2c9-d50bc52092ee"
+        "outputId": "7dec2f95-6689-40b1-bc3b-f3f4f522f29c"
       },
       "execution_count": null,
       "outputs": [
@@ -124,7 +131,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://5f5c-34-106-239-109.ngrok-free.app\n",
+            " * Running on http://84e0-34-125-18-208.ngrok-free.app\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ]
         },
@@ -132,8 +139,11 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "INFO:werkzeug:127.0.0.1 - - [08/Nov/2023 01:23:50] \"GET / HTTP/1.1\" 200 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [08/Nov/2023 01:23:51] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:26] \"GET / HTTP/1.1\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:27] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:28] \"GET /contact HTTP/1.1\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:28] \"GET /static/images/phone.gif HTTP/1.1\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:42] \"GET /hi/Phong HTTP/1.1\" 200 -\n"
           ]
         }
       ]
