--- a/Mobile_Web_Lab1.ipynb
+++ b/Mobile_Web_Lab1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1J96yuG2BU9Qb7rTEMGNqaUxEhMlrOi1V",
-      "authorship_tag": "ABX9TyMOWVgyi3d/5/sJ/xYcLYkT",
+      "authorship_tag": "ABX9TyNOoAVxEUyQu9lmoOZOIEoT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from flask import Flask, render_template\n",
+        "from flask import Flask, render_template,request\n",
         "from flask_ngrok import run_with_ngrok\n",
         "app = Flask(__name__)\n",
         "run_with_ngrok(app)\n",
@@ -99,6 +99,21 @@
         "def hi(name):\n",
         "  return render_template('hi.html', name=name)\n",
         "\n",
+        "@app.route('/get_form')\n",
+        "def get_form():\n",
+        "  return render_template('get_form.html')\n",
+        "\n",
+        "@app.route('/process', methods=['GET','POST'])\n",
+        "def process():\n",
+        "  mass = request.form['mass']\n",
+        "  velocity = request.form['velocity']\n",
+        "  ke = 0.5*float(mass)*float(velocity)**2\n",
+        "  return render_template('result.html', ke=ke)\n",
+        "\n",
+        "@app.route('/result')\n",
+        "def result():\n",
+        "  return render_template('result.html')\n",
+        "\n",
         "app.run()\n"
       ],
       "metadata": {
@@ -106,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WqV55iCVag_D",
-        "outputId": "7dec2f95-6689-40b1-bc3b-f3f4f522f29c"
+        "outputId": "2d23a579-6799-4251-baed-978f93790322"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +146,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://84e0-34-125-18-208.ngrok-free.app\n",
+            " * Running on http://38f1-34-125-18-208.ngrok-free.app\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ]
         },
@@ -139,11 +154,24 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:26] \"GET / HTTP/1.1\" 200 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:27] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:28] \"GET /contact HTTP/1.1\" 200 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:28] \"GET /static/images/phone.gif HTTP/1.1\" 200 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:37:42] \"GET /hi/Phong HTTP/1.1\" 200 -\n"
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:00] \"GET / HTTP/1.1\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:01] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:08] \"GET /get_form HTTP/1.1\" 200 -\n",
+            "ERROR:__main__:Exception on /process [POST]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/flask/app.py\", line 2529, in wsgi_app\n",
+            "    response = self.full_dispatch_request()\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/flask/app.py\", line 1825, in full_dispatch_request\n",
+            "    rv = self.handle_user_exception(e)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/flask/app.py\", line 1823, in full_dispatch_request\n",
+            "    rv = self.dispatch_request()\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/flask/app.py\", line 1799, in dispatch_request\n",
+            "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
+            "  File \"<ipython-input-16-878f623adb18>\", line 26, in process\n",
+            "    ke = 0.5*float(mass)*float(velocity)**2\n",
+            "ValueError: could not convert string to float: ''\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:12] \"\u001b[35m\u001b[1mPOST /process HTTP/1.1\u001b[0m\" 500 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:16] \"POST /process HTTP/1.1\" 200 -\n"
           ]
         }
       ]
