--- a/Mobile_Web_Lab1.ipynb
+++ b/Mobile_Web_Lab1.ipynb
@@ -121,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WqV55iCVag_D",
-        "outputId": "2d23a579-6799-4251-baed-978f93790322"
+        "outputId": "cbd7cced-7eb1-451d-dd2a-6f105b0a0bc5"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://38f1-34-125-18-208.ngrok-free.app\n",
+            " * Running on http://b2e7-34-125-18-208.ngrok-free.app\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ]
         },
@@ -154,24 +154,10 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:00] \"GET / HTTP/1.1\" 200 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:01] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:08] \"GET /get_form HTTP/1.1\" 200 -\n",
-            "ERROR:__main__:Exception on /process [POST]\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/flask/app.py\", line 2529, in wsgi_app\n",
-            "    response = self.full_dispatch_request()\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/flask/app.py\", line 1825, in full_dispatch_request\n",
-            "    rv = self.handle_user_exception(e)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/flask/app.py\", line 1823, in full_dispatch_request\n",
-            "    rv = self.dispatch_request()\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/flask/app.py\", line 1799, in dispatch_request\n",
-            "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
-            "  File \"<ipython-input-16-878f623adb18>\", line 26, in process\n",
-            "    ke = 0.5*float(mass)*float(velocity)**2\n",
-            "ValueError: could not convert string to float: ''\n",
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:12] \"\u001b[35m\u001b[1mPOST /process HTTP/1.1\u001b[0m\" 500 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:54:16] \"POST /process HTTP/1.1\" 200 -\n"
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:56:12] \"GET / HTTP/1.1\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:56:12] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:56:19] \"GET /get_form HTTP/1.1\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [15/Nov/2023 01:56:25] \"POST /process HTTP/1.1\" 200 -\n"
           ]
         }
       ]
